--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
         <nav class="navbar container">
             <a href="/index.html" class="navbar-logo">
-                <img src="/assets/images/logo.svg" alt="" class="navbar-logo-image">
+                <img src="./assets/images/logo.svg" alt="" class="navbar-logo-image">
             </a>
             <div class="navbar-menu">
                 <ul class="navbar-list">
