--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <div class="showcase-container container">
                 <h1 class="showcase-title title title-main">Hello, I'm Cris Paul, a professional photographer.</h1>
                 <picture>
-                    <source media="(min-width: 768px)" srcset="/assets/images/showcase_image_lg.png">
-                    <img src="/assets/images/showcase_image_sm.png" alt="" class="showcase-image">
+                    <source media="(min-width: 768px)" srcset="./assets/images/showcase_image_lg.png">
+                    <img src="./assets/images/showcase_image_sm.png" alt="" class="showcase-image">
                 </picture>
             </div>
         </section>
@@ -127,7 +127,7 @@
                     </p>
                 </div>
                 <div class="services-image-wrapper">
-                    <img src="/assets/images/cris_paul.png" alt="">
+                    <img src="./assets/images/cris_paul.png" alt="">
                 </div>
                 <div class="services-list">
                     <div class="services-list-divider">
@@ -181,8 +181,8 @@
                 <a href="#" class="btn btn-text btn-green">Learn more</a>
             </div>
             <div class="about-images">
-                <img src="/assets/images/about_image_top.png" alt="" class="about-images-image about-images-image-top">
-                <img src="/assets/images/about_image_bottom.png" alt="" class="about-images-image about-images-image-bottom">
+                <img src="./assets/images/about_image_top.png" alt="" class="about-images-image about-images-image-top">
+                <img src="./assets/images/about_image_bottom.png" alt="" class="about-images-image about-images-image-bottom">
             </div>
         </div>
     </section>
@@ -201,16 +201,16 @@
             </div>
             <article class="blog-post post-left">
                 <picture class="blog-post-image">
-                    <source media="(min-width: 450px)" srcset="/assets/images/blog_post_1.png">
-                    <img src="/assets/images/blog_post_1_small.png" alt="">
+                    <source media="(min-width: 450px)" srcset="./assets/images/blog_post_1.png">
+                    <img src="./assets/images/blog_post_1_small.png" alt="">
                 </picture>
                 <h3 class="blog-post-title title">Sample title</h3>
                 <a href="#" class="btn btn-text btn-transparent">Read more</a>
             </article>
             <article class="blog-post post-right">
                 <picture class="blog-post-image">
-                    <source media="(min-width: 450px)" srcset="/assets/images/blog_post_2.png">
-                    <img src="/assets/images/blog_post_2_small.png" alt="">
+                    <source media="(min-width: 450px)" srcset="./assets/images/blog_post_2.png">
+                    <img src="./assets/images/blog_post_2_small.png" alt="">
                 </picture>
                 <h3 class="blog-post-title title">Sample title</h3>
                 <a href="#" class="btn btn-text btn-transparent">Read more</a>
@@ -227,8 +227,8 @@
             </div>
             <span class="footer-separator"></span>
             <div class="footer-group">
-                <a href="/index.html" class="footer-logo">
-                    <img src="/assets/images/logo.svg" alt="">
+                <a href="./index.html" class="footer-logo">
+                    <img src="./assets/images/logo.svg" alt="">
                 </a>
                 <p class="footer-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis nostrum expedita minus officia iure unde dolorum autem.</p>
                 <ul class="footer-list">
